--- a/app/globals.css
+++ b/app/globals.css
@@ -20,7 +20,22 @@
 }
 
 body {
-  background: var(--background);
+  background: radial-gradient(farthest-side at 50% 70%, #392011, #2c190d, black);
+  background-attachment: fixed;
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
+  margin: 0;
+  padding: 0;
+}
+
+.animate__animated.animate__slideOutLeft {
+  --animate-duration: 1s;
+}
+
+html{
+  scroll-behavior: smooth;
+}
+
+#mask{
+  background-color:#392011;
 }
